# dynamic-ledger

./: AUTHORS  COPYRIGHT.txt  Doxyfile  INSTALL  LICENSE.txt  Makefile  Makefile.am  Makefile.in  README  README.dox  README.md  README.txt  configure.ac  example_ledger.txt  ledger-txt.c  ledger-txt.h  ledger.c  out.txt  sum.txt  test.c
include/: ledger-txt.h  ledger.h  user_settings.h
man/: dl.1
src/: alloc_entries.c  alloc_text_content.c  alloc_totals.c  bad_input_file.c  bad_output_file.c  check_legal_double.c  check_legal_double_modify.c  check_legal_double_modify_entry.c  clean.c  col_delim_char.c  col_delim_str.c  color.c  column_delim.c  condense.c  condense_and_print.c  condense_str.c  contains_column_delim.c  contains_row_delim.c  contains_tabs.c  copy_ledger.c  copy_rows.c  cut_rows.c  edit_entry.c  edit_entry_noretotal.c  edit_row.c  filled_partitions.c  free_entries.c  free_for_retotal.c  free_ledger.c  get_color.c  get_entries_from_filename.c  get_entries_from_stream.c  get_entries_from_string.c  get_ledger.c  get_ledger_from_filename.c  get_ledger_from_stream.c  get_ledger_from_string.c  get_names.c  get_text_content_from_stream.c  get_text_content_from_string.c  (+79 more)
src/.deps/: alloc_entries.Po  alloc_totals.Po  clean.Po  col_delim_char.Po  col_delim_str.Po  color.Po  condense.Po  copy_ledger.Po  copy_rows.Po  cut_rows.Po  edit_entry.Po  edit_entry_noretotal.Po  edit_row.Po  filled_partitions.Po  free_entries.Po  free_for_retotal.Po  free_ledger.Po  get_entries_from_filename.Po  get_entries_from_stream.Po  get_entries_from_string.Po  get_ledger.Po  get_names.Po  get_totals.Po  input_file.Po  insert_rows.Po  legal_amounts.Po  legal_double.Po  legal_status_code.Po  legal_status_codes.Po  locked.Po  main.Po  map_by_col.Po  map_to_column.Po  map_to_grid.Po  map_to_multiple.Po  map_to_rowcol.Po  move_rows.Po  new_ledger.Po  output_file.Po  parse_char.Po  (+34 more)
testing/: make-test-data.sh
testing/scripts/: tests.sh
tests/: bad.txt  example_ledger.txt  make-data.sh  nonnull.txt  test-all.sh  tests.sh
tests/alloc_entries/: Makefile  test_alloc_entries.c
tests/alloc_totals/: Makefile  test_alloc_totals.c
tests/check_legal_double/: Makefile  test_check_legal_double.c
tests/clean/: Makefile  test_clean.c
tests/col_delim_char/: Makefile  test_col_delim_char.c
tests/col_delim_str/: Makefile  test_col_delim_str.c
tests/color/: Makefile  test_color.c
tests/column_delim/: Makefile  test_column_delim.c
tests/condense/: Makefile  test_condense.c
tests/contains_column_delim/: Makefile  test_contains_column_delim.c
tests/contains_row_delim/: Makefile  test_contains_row_delim.c
tests/copy_ledger/: Makefile  test_copy_ledger.c
tests/copy_rows/: Makefile  test_copy_rows.c
tests/cut_rows/: Makefile  test_cut_rows.c
tests/edit_entry/: Makefile  test_edit_entry.c
tests/edit_entry_noretotal/: Makefile  test_edit_entry_noretotal.c
tests/edit_row/: Makefile  test_edit_row.c
tests/filled_partitions/: Makefile  test_filled_partitions.c
tests/free_entries/: Makefile  test_free_entries.c
tests/free_for_retotal/: Makefile  test_free_for_retotal.c
tests/free_ledger/: Makefile  test_free_ledger.c
tests/get_color/: Makefile  test_get_color.c
tests/get_entries_from_filename/: Makefile  test_get_entries_from_filename.c
tests/get_entries_from_stream/: Makefile  test_get_entries_from_stream.c
tests/get_entries_from_string/: Makefile  test_get_entries_from_string.c
tests/get_ledger/: Makefile  test_get_ledger.c
tests/get_names/: Makefile  test_get_names.c
tests/get_totals/: Makefile  test_get_totals.c
tests/icmp/: Makefile  test_icmp.c
tests/input_file/: Makefile  test_input_file.c
tests/insert_filled_rows/: Makefile  test_insert_filled_rows.c
tests/insert_rows/: Makefile  (+1 more)
tutorial/: ledger.txt  tutorial.tex
(+166 files in other folders)
