## Dynamic Ledger: a minimalist personal accounting software package

AC_INIT([Dynamic Ledger], [0.0], [will.landau@gmail.com],
        [dl], [www.github.com/wlandau/dynamic-ledger])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 -Wall no-define])

AC_CONFIG_HEADERS([config.h])
AC_PROG_CC
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
